Update postgres and mongo dependencies in pom.xml